kubernetes/apps/media/schall/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: schall
  namespace: media
  labels:
    app: schall
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: schall
